 NEWS/ChangeLog for rJava
--------------------------

1.0-7
    o	fix conversion from native encoding into UTF-16 (introduced
	in 1.0-2) to work correctly if the native encoding is
	neither UTF-8 nor Latin1. (#228)

    o	debugging: if DEBUG_ENCODING C macro is defined string
	conversion routines will output debugging information
	when strings are converted between R and Java.

    o	JRI: console callbacks (Read/WriteConsole) encode and decode
	strings between native encoding and Java. (#24)
	Previously, only UTF-8 native locales were supported.

    o	Replaced deprected constructors like new Double(double) with
	valueOf() calls to make recent JDKs happy.


1.0-6	2021-12-10
    o	remove obsolete autoconf macros

    o	JRI 0.5-7 changes:
    	- add support for JRI_CPPFLAGS and JRI_LIBS variables which
	  allow specific flag overrides in JRI only
	- use config.h in jri.h (except for Windows)
	- add header checks needed for R_ext/eventloop.h (#284)
	- update automake tools


1.0-5	2021-09-24
    o	allow access modifications to fail on JDK-17

	== Important note to Java developers:
	JDK-17 no longer allows access overrides, so J() wrapper
	will fail for cases where the underlying class does
	not allow public access. This means that it is no longer
	possible to write high-level code that behaves as if it was a
	member of the class. Do not upgrade to JDK-17 if that is
	important in your application or write a Java wrapper that
	exposes the necessary fields/methods as public.


1.0-4	2021-09-03
    o	make jverify() check the object type before checking for
	serialization content. This fixes possible segfaults,
	including one in .jfield() when used on jclassName objects
	where jverify() was used on the wrapping S4 class.


1.0-3	2021-04-16
    o	update URLs referring to Java docs to current 1.8 website


1.0-2	2021-04-15
    o	convert UTF-16 surrogate pairs to UTF-8 when retrieving strings
	from Java to R (#51)

    o	use UTF-16 encoding when converting R strings to Java
